# Qt-Quick-and-QML-for-Beginners

./: README.md
1.Introduction/1.QtQuickText1/: Readme.md  main.qml
12.Model View Controller/1.ListViewandListModel/: MDelegate.qml  Readme.md  main.qml  qml.qrc
12.Model View Controller/2.InlineModelsandDelegates/: Readme.md  main.qml
12.Model View Controller/3.HeaderFooterandHighlighter/: Readme.md  main.qml
2 - QML Syntax/2 - QML Language Part-1/: Readme.md
2 - QML Syntax/3 - Property Binding Demo/: main.qml
2 - QML Syntax/4 - Properties and Handlers/: Readme.md  main.qml
2 - QML Syntax/5 - Introduction to QML/: CMakeLists.txt  Readme.md
2.QML Syntax/1.QMLSyntax/: Readme.md  main.qml
2.QML Syntax/2.QML_LanguagePart1/: Readme.md
2.QML Syntax/3.Property_Binding_Demo/: Readme.md
2.QML Syntax/4.Properties_and_Handlers/: Readme.md
2.QML Syntax/5.IntroductionToQML/: MButton.qml  main.qml
3 - QML Basic Types/1 - QML Basic Types Part-1/: main.qml  resources.qrc
3 - QML Basic Types/2 - Buid Your Own Custom Element/: MButton.qml
3.QML Basic Types/1.QMLBasicTypesPart-1/: Readme.md
3.QML Basic Types/2.BuidYourOwnCustomElement/: main.qml
3.QML Basic Types/BuidYourOwnCustomElement/: Readme.md
3.QML Basic Types/QMLBasicTypesPart-1/: Readme.md
4 - Signal and Slots/2 - Signal and Slots Demo-2/: Receiver.qml  main.qml
4.Signal and Slots/2.SignalandSlotsDemo2/: Notifier.qml  Readme.md
4.Signal and Slots/SignalandSlotsDemo/: Readme.md  main.qml
5 - User Input Elements/3 - MessageArea-DragandDrop/: Readme.md
5 - User Input Elements/5 - KeysNavigation/: Readme.md
5 - User Input Elements/6 - FocusScoped/: Readme.md
5.User Input Elements/1.TextInput/: Readme.md  main.qml
5.User Input Elements/2.TextEdit/: Readme.md  main.qml
5.User Input Elements/3.MessageArea-DragandDrop/: main.qml
5.User Input Elements/4.KeysAttached/: Readme.md  main.qml
5.User Input Elements/5.KeysNavigation/: main.qml
5.User Input Elements/6.FocusScoped/: MButton.qml  main.qml
6 - Working with JS/1 - Function and Scope/: main.qml  qml.qrc
8 - Transforms, Transitions and Animations/1 - Working with Transforms/: CMakeLists.txt  ClickableRectangle.qml
8.Transforms, Transitions and Animations/6.Animated Ball Bounce/: CMakeLists.txt  Readme.md
QML Syntax/QMLSyntax/: main.qml
(+123 files in other folders)
